syntax = "proto3";

option csharp_namespace = "LibrarySystem.GrpcClient";

import "google/protobuf/timestamp.proto";


service UserService {
  rpc GetTopUsers (GetTopUsersRequest) returns (GetTopUsersReply);
  rpc GetUserBorrowedBooks(GetUserBorrowedBooksRequest) returns (GetUserBorrowedBooksReply);
}

//..................Get top users in date range....................

message User
{
	string name = 1;
	int32 count = 2;
}

message GetTopUsersRequest{
	google.protobuf.Timestamp startDate = 1;
	google.protobuf.Timestamp endDate = 2;
}

message GetTopUsersReply{
	repeated User user = 1;
}

//....................Get books for user in date range...............

message Book
{
	string title = 1;
}


message GetUserBorrowedBooksRequest{
	google.protobuf.Timestamp startDate = 1;
	google.protobuf.Timestamp endDate = 2;
	int32 id = 3;
}
message GetUserBorrowedBooksReply{
	repeated Book book = 1;
}